--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,8 +5,15 @@
   font-family: "Poppins", sans-serif;
 }
 
+$colorPrincipalOscuro: rgb(131, 72, 35);
+$colorPrincipalClaro: rgb(159, 87, 43);
+
+@mixin shadow($alto, $desenfoque) {
+  box-shadow: 0 $alto $desenfoque 0 rgba(131, 72, 35, 0.1);
+}
+
 header {
-  background-color: #9f572b;
+  background-color: $colorPrincipalClaro;
   color: white;
 }
 
@@ -16,27 +23,27 @@ a {
 }
 
 footer {
-  background-color: #9f572b;
+  background-color: $colorPrincipalClaro;
   color: white;
 }
 
 main {
-  background-color: #f2d8bb;
+  background-color: rgb(242, 216, 187);
 }
 
 table {
-  border: 2px solid #834823;
+  border: 2px solid $colorPrincipalOscuro;
   text-align: center;
   border-collapse: collapse;
 }
 
 td,
 th {
-  border: 1px solid #834823;
+  border: 1px solid $colorPrincipalOscuro;
 }
 
 th {
-  border-bottom: 2px solid #834823;
+  border-bottom: 2px solid $colorPrincipalOscuro;
 }
 
 form {
@@ -44,7 +51,7 @@ form {
 }
 
 .title {
-  color: #834823;
+  color: $colorPrincipalOscuro;
   margin-bottom: 24px;
 }
 
@@ -66,13 +73,16 @@ header img {
   0% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(-8px);
   }
+
   100% {
     transform: translateY(0);
   }
 }
+
 header nav ul {
   margin-bottom: 0;
 }
@@ -135,12 +145,16 @@ footer img {
   overflow: hidden;
   margin-bottom: 16px;
   display: flex;
-  box-shadow: 0 10px 20px 0 rgba(131, 72, 35, 0.1);
+  @include shadow(10px, 20px);
 }
 
 .servicios-container__article--right-service {
   flex-direction: row-reverse;
   text-align: right;
+}
+
+.servicios-container__img-mobile {
+  display: none;
 }
 
 .servicios-container__img {
@@ -156,7 +170,7 @@ footer img {
 }
 
 .cabanas-info {
-  border: 1px solid #834823;
+  border: 1px solid $colorPrincipalOscuro;
   border-radius: 10px;
   margin-bottom: 24px;
   padding: 24px;
@@ -170,12 +184,14 @@ footer img {
 
 .galeria__image-container {
   overflow: hidden;
-}
-.galeria__image-container img {
-  transition: all 0.2s;
-}
-.galeria__image-container img:hover {
-  transform: scale(1.15);
+
+  img {
+    transition: all 0.2s;
+
+    &:hover {
+      transform: scale(1.15);
+    }
+  }
 }
 
 .galeria__article {
@@ -183,7 +199,7 @@ footer img {
   border-radius: 10px;
   overflow: hidden;
   padding: 5px;
-  box-shadow: 0 4px 8px 0 rgba(131, 72, 35, 0.1);
+  @include shadow(4px, 8px);
 }
 
 .galeria__article--destacado {
@@ -210,15 +226,16 @@ footer img {
 .ubicacion-container__map {
   width: 60%;
   position: relative;
-}
-.ubicacion-container__map iframe {
-  width: 100%;
-  height: 100%;
+
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .ubicacion-container__info {
   width: 40%;
-  background-color: #9f572b;
+  background-color: $colorPrincipalClaro;
   color: #fff;
   text-align: center;
   padding: 32px;
@@ -261,13 +278,13 @@ footer img {
   margin-right: 6px;
 }
 
-.contacto input[type=submit] {
+.contacto input[type="submit"] {
   cursor: pointer;
-  background-color: #9f572b;
+  background-color: $colorPrincipalClaro;
   color: #fff;
 }
 
-.contacto input[type=reset] {
+.contacto input[type="reset"] {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -276,21 +293,26 @@ footer img {
   margin-top: 16px;
 }
 
-.temp-media, .temp-baja, .temp-alta {
+$temp-alta: rgb(99, 30, 30);
+$temp-baja: rgb(23, 87, 23);
+$temp-media: rgb(75, 75, 17);
+
+%temp {
   font-style: italic;
   font-weight: bold;
 }
 
 .temp-alta {
-  color: #631e1e;
+  @extend %temp;
+  color: $temp-alta;
 }
-
 .temp-baja {
-  color: #175717;
+  @extend %temp;
+  color: $temp-baja;
 }
-
 .temp-media {
-  color: #4b4b11;
+  @extend %temp;
+  color: $temp-media;
 }
 
 .tarifas-table td,
@@ -307,21 +329,22 @@ footer img {
   margin-right: 1rem;
   background-color: #fff;
   padding: 10px;
-}
-.temporadas__temporada h2 {
-  font-size: 1.45rem;
+
+  h2 {
+    font-size: 1.45rem;
+  }
 }
 
-.temporadas__temporada-alta {
-  background-color: #ff0000;
-}
+$temporadas: (
+  alta: #ff0000,
+  baja: #008000,
+  media: #ffff00,
+);
 
-.temporadas__temporada-baja {
-  background-color: #008000;
-}
-
-.temporadas__temporada-media {
-  background-color: #ffff00;
+@each $temp, $color in $temporadas {
+  .temporadas__temporada-#{$temp} {
+    background-color: $color;
+  }
 }
 
 .temporadas__temporada-oscuro {
@@ -348,6 +371,24 @@ footer img {
   border-radius: 10px;
 }
 
+@media screen and (max-width: 1100px) {
+  .servicios-container__img-mobile {
+    display: block;
+    padding: 0;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .servicios-container__img {
+    display: none;
+  }
+
+  .servicios-container__article {
+    display: block;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   header img {
     height: 50px;
@@ -362,15 +403,44 @@ footer img {
     display: block;
   }
 
-  .ubicacion-map {
+  .ubicacion-container__map {
     height: 250px;
   }
 
-  .ubicacion-info,
-.ubicacion-map {
+  .ubicacion-container__info,
+  .ubicacion-container__map {
     width: 100%;
     width: 100%;
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+@media screen and (max-width: 600px) {
+  footer img {
+    height: auto;
+    width: 80%;
+  }
+
+  .temporadas {
+    display: block;
+  }
+
+  .temporadas__temporada {
+    margin-right: 0;
+    margin-bottom: 0.75rem;
+  }
+
+  .tarifas-table td,
+  .tarifas-table th {
+    padding: 4px 8px;
+  }
+
+  .hero-text {
+    h1 {
+      font-size: 1.25rem;
+    }
+
+    h2 {
+      font-size: 1rem;
+    }
+  }
+}
