--- a/scss/style.scss
+++ b/scss/style.scss
@@ -85,11 +85,23 @@ header img {
 
 header nav ul {
   margin-bottom: 0;
+  display: flex;
+  align-items: center;
 }
 
 header nav ul li {
-  display: inline-block;
   margin: 0 16px;
+}
+
+header nav ul li.highlight {
+  background-color: #fff;
+  color: #6f390a;
+  border-radius: 5px;
+
+  a {
+    padding: 6px 12px;
+    display: inline-block;
+  }
 }
 
 header nav ul li a {
@@ -98,6 +110,10 @@ header nav ul li a {
 
 header nav ul li a:hover {
   color: rgba(255, 255, 255, 0.7);
+}
+
+header nav ul li.highlight a:hover {
+  color: #6f390a;
 }
 
 main {
