--- a/scss/style.scss
+++ b/scss/style.scss
@@ -387,6 +387,68 @@ $temporadas: (
   border-radius: 10px;
 }
 
+.reserva-form {
+  padding: 2rem;
+  border-radius: 10px;
+  border: 1px solid #6f390a;
+
+  button {
+    background-color: #6f390a;
+    color: #fff;
+    padding: 5px 18px;
+    border-radius: 5px;
+    border: none;
+  }
+}
+
+.reserva-form-inputs {
+  display: flex;
+}
+
+.reservas-form-input-container {
+  display: flex;
+  align-items: center;
+  margin-right: 2rem;
+
+  label {
+    margin-right: 10px;
+  }
+}
+
+#reserva-resultados {
+  margin-top: 4rem;
+}
+
+.resultado-reserva {
+  border-radius: 10px;
+  background-color: rgba(#6f390a, 0.7);
+  border: 2px solid #6f390a;
+  color: #fff;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.resultado-reserva-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.resultado-reserva-precios {
+  text-align: right;
+
+  p {
+    margin-bottom: 0;
+  }
+}
+
+.resultado-reserva-caracteristicas {
+  margin-top: 1.5rem;
+}
+
+.precio-final {
+  font-size: 28px;
+}
+
 @media screen and (max-width: 1100px) {
   .servicios-container__img-mobile {
     display: block;
