--- a/scss/style.scss
+++ b/scss/style.scss
@@ -449,6 +449,40 @@ $temporadas: (
   font-size: 28px;
 }
 
+#cantidad_pax {
+  width: 50px;
+}
+
+@media screen and (max-width: 1366px) {
+  .reserva-form-inputs {
+    display: grid;
+    gap: 26px;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .reserva-form {
+    button {
+      width: 200px;
+      display: block;
+    }
+  }
+
+  .reservas-form-input-container {
+    margin-right: 0;
+
+    label {
+      margin-right: 1rem;
+      width: 300px;
+    }
+
+    select,
+    #cantidad_pax,
+    input {
+      width: 100%;
+    }
+  }
+}
+
 @media screen and (max-width: 1100px) {
   .servicios-container__img-mobile {
     display: block;
@@ -492,7 +526,17 @@ $temporadas: (
   }
 }
 
+@media screen and (max-width: 970px) {
+  .reserva-form-inputs {
+    grid-template-columns: minmax(0, 1fr);
+  }
+}
+
 @media screen and (max-width: 600px) {
+  .reservas-form-input-container {
+    display: block;
+  }
+
   footer img {
     height: auto;
     width: 80%;
