--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,22 @@ footer img {
 #cantidad_pax {
   width: 50px; }
 
+.texto-cargando-comentarios {
+  margin-top: 2rem;
+  font-size: 24px; }
+
+.comentarios-container {
+  padding: 2rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 16px; }
+  .comentarios-container .comentario {
+    border: 4px solid rgba(111, 57, 10, 0.2);
+    border-radius: 10px;
+    padding: 16px; }
+    .comentarios-container .comentario p {
+      margin-bottom: 0; }
+
 @media screen and (max-width: 1366px) {
   .reserva-form-inputs {
     display: grid;
