--- a/scss/style.scss
+++ b/scss/style.scss
@@ -453,6 +453,28 @@ $temporadas: (
   width: 50px;
 }
 
+.texto-cargando-comentarios {
+  margin-top: 2rem;
+  font-size: 24px;
+}
+
+.comentarios-container {
+  padding: 2rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 16px;
+
+  .comentario {
+    border: 4px solid rgba(#6f390a, 0.2);
+    border-radius: 10px;
+    padding: 16px;
+
+    p {
+      margin-bottom: 0;
+    }
+  }
+}
+
 @media screen and (max-width: 1366px) {
   .reserva-form-inputs {
     display: grid;
