--- a/css/style.css
+++ b/css/style.css
@@ -318,12 +318,25 @@ footer img {
   margin-top: 4rem; }
 
 .resultado-reserva {
+  display: none;
   border-radius: 10px;
   background-color: rgba(111, 57, 10, 0.7);
   border: 2px solid #6f390a;
   color: #fff;
   padding: 1rem;
   margin-bottom: 1rem; }
+  .resultado-reserva .reserva-button {
+    border: none;
+    padding: 7px 20px;
+    border-radius: 5px;
+    margin-left: 1rem; }
+
+.reserva-completa {
+  display: none;
+  margin: 6rem 0; }
+  .reserva-completa p {
+    color: #555;
+    font-style: italic; }
 
 .resultado-reserva-header {
   display: flex;
@@ -353,6 +366,7 @@ footer img {
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   gap: 16px; }
   .comentarios-container .comentario {
+    display: none;
     border: 4px solid rgba(111, 57, 10, 0.2);
     border-radius: 10px;
     padding: 16px; }
