--- a/scss/style.scss
+++ b/scss/style.scss
@@ -420,12 +420,29 @@ $temporadas: (
 }
 
 .resultado-reserva {
+  display: none;
   border-radius: 10px;
   background-color: rgba(#6f390a, 0.7);
   border: 2px solid #6f390a;
   color: #fff;
   padding: 1rem;
   margin-bottom: 1rem;
+
+  .reserva-button {
+    border: none;
+    padding: 7px 20px;
+    border-radius: 5px;
+    margin-left: 1rem;
+  }
+}
+
+.reserva-completa {
+  display: none;
+  margin: 6rem 0;
+  p {
+    color: #555;
+    font-style: italic;
+  }
 }
 
 .resultado-reserva-header {
@@ -465,6 +482,7 @@ $temporadas: (
   gap: 16px;
 
   .comentario {
+    display: none;
     border: 4px solid rgba(#6f390a, 0.2);
     border-radius: 10px;
     padding: 16px;
